# intertemporal

./: .gitignore  README.md  pyproject.toml
scripts/: README.md  analyze_choices.py  analyze_dataset.py  analyze_preference.py  contrastive_vectors.py  generate_dataset.py  query_llm.py  train_probes.py  try_steering.py
scripts/common/: __init__.py  config_utils.py  consistency.py  formatting.py  formatting_variation.py  output_io.py  prompt_builder.py  schemas.py  token_positions.py  utils.py  verification.py
scripts/configs/: README.md
scripts/configs/choice_modeling/: 14Bsamegrid.json  default_analysis.json
scripts/configs/contrastive/: default_contrastive.json
src/: README.md  __init__.py  dataset_generator.py  model_runner.py  types.py
src/choice/: __init__.py  config.py  consistency.py  data.py  results.py  training.py  types.py
src/choice_model/: __init__.py  discount_function.py  value_function.py
src/common/: __init__.py  io.py  profiling.py  schema_utils.py  schemas.py
src/plotting/: __init__.py  common.py  export.py  heatmaps.py  text_viz.py
src/probes/: __init__.py  data.py  models.py  training.py
src/steering/: __init__.py  hooks.py  schemas.py
tests/: README.md  RUN_ALL_TESTS.py  __init__.py  conftest.py  test_pipeline.py
tests/scripts/: SPEC.md  __init__.py  test_config_loading.py  test_output_schemas.py  test_try_steering.py
tests/scripts/common/: SPEC.md  (+3 more)
tests/src/: SPEC.md  __init__.py  test_config_parsing.py  test_dataset_generator.py  test_discount_function.py  test_model_runner.py  test_types.py  test_value_function.py
(+31 files in other folders)
